[tool.poetry]
name = "lazytree"
version = "0.3.1"
readme="README.md"
description = "Python library for manipulating infinite trees."
authors = ["Marcell Vazquez-Chanlatte <marcell.vc@eecs.berkeley.edu>"]
repository = "https://github.com/mvcisback/pyLazyTree"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.1"
funcy = "^1.12"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
hypothesis = "^4.24"
pytest = "^4.6"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.28"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
