[tool.poetry]
name = "lazytree"
version = "0.3.2"
readme="README.md"
description = "Python library for manipulating infinite trees."
authors = ["Marcell Vazquez-Chanlatte <marcell.vc@eecs.berkeley.edu>"]
repository = "https://github.com/mvcisback/pyLazyTree"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^20.0.0"
funcy = "^1.12"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
hypothesis = "^5.0.0"
pytest = "^6.0.0"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-sugar = "^0.9.2"
pytest-xdist = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
